--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -4,15 +4,13 @@ imports:
 framework:
     router:
         resource: "%kernel.root_dir%/config/routing_dev.yml"
-        strict_requirements: true
-    profiler: { only_exceptions: false }
 
 monolog:
     handlers:
         main:
             type:   stream
             path:   "%kernel.logs_dir%/%kernel.environment%.log"
-            level:  debug
+            level:  notice
         console:
             type:   console
             bubble: false
